--- a/src/components/Header/HeaderMain.css
+++ b/src/components/Header/HeaderMain.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'PlusJakartaSans';
-  src: url('./fonts/PlusJakartaSans.ttf');
-}
-
 .eventfulFont {
   font-weight: bolder !important;
   background: linear-gradient(82.4deg, #f74e37 27.75%, #b43061 100.25%),
@@ -10,6 +5,20 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: bolder !important;
+}
+
+@font-face {
+  font-family: 'PlusJakartaSans';
+  src: url('../../assets/fonts/PlusJakartaSans.ttf');
+}
+
+.headerDivider {
+  /* border-left: 1px solid #38546d; */
+  border-right: 1px solid #e4e4e4;
+  height: auto;
+  position: absolute;
+  right: 275px;
+  top: 10px;
 }
 
 .header {
