--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ body {
   font-family: 'PlusJakartaSans';
   src: url('./assets/fonts/PlusJakartaSans.ttf');
 }
+
+/* .paragraph-lead-bold {
+  font-weight: 700;
+} */
