--- a/src/components/TextField/Textbox.css
+++ b/src/components/TextField/Textbox.css
@@ -2,6 +2,10 @@
   display: grid;
 }
 
+.textbox-div div[class*='MuiOutlinedInput-root'] {
+  padding-right: 0;
+}
+
 .textbox-label {
   font-size: 12px !important;
   line-height: 16px !important;
