added fucntionality in upload

--- a/src/components/TextField/Textbox.css
+++ b/src/components/TextField/Textbox.css
@@ -2,7 +2,7 @@
   display: grid;
 }
 
-.textbox-div div[class*='MuiOutlinedInput-root'] {
+.upload-textbox-div div[class*='MuiOutlinedInput-root'] {
   padding-right: 0;
 }
 
